Updated html & body  overflow to test fix 'overscroll' bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -144,8 +144,17 @@ body {
   font-size: 100%;
 }
 
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
+body {
+  overflow: auto;
+  height: 100%;
+}
+
 main {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   gap: 8rem;
